From a2d544f (master):
=====================

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, pass
the right shape of inputs in calls to altaz2hadec() 

From bb083bc (closure-adv):
==========================

(*) Add folder prisim/examples/codes/ and its contents to repo

In setup.py,

(*) Include folder prisim/examples/codes/ and its contents during
installation

From acdf710 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Modify function save_CPhase_cross_power_spectrum() to save also the
output of function incoherent_cross_power_spectrum_average()
(*) Modify function read_CPhase_cross_power_spectrum() to also read the
what is saved using function save_CPhase_cross_power_spectrum() that
came as the output of function incoherent_cross_power_spectrum_average()

From c8b09de (master):
=====================

In prisim/interferometry.py,

(*) In member function append-settings() of class ROI_parameters, there
was no option to handle achromatic beams when the beams were to be
determined analytically. Now it accepts beam chromaticity parameters in
input roi_info and computes analystical beam at specified frequency and
propagates it to all frequencies

In scripts/run_prisim.py,

(*) Beam chromaticity information in case of analytical beams was not
being passed on to the ROI parameters in call to roi.append_settings()
which is now passed
(*) Minor changes to chunk completion time by process

In prisim/delay_spectrum.py,

(*) In member function beam3Dvol() of class DelayPowerSpectrum, update
code block to determine achromatic analytical beams.

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), ensure the input frequency
is converted to a numpy array of non-zero length even if input as a
scalar. Update function docstring accordingly

From ba17ed5 (closure-adv):
==========================

(*) Add prisim/scriptUtils/write_PRISim_bispectrum_phase_to_npz_util.py
to repo
